Layout bug fix

--- a/frontend/src/style/episodeitem.css
+++ b/frontend/src/style/episodeitem.css
@@ -10,13 +10,6 @@
   height: 100%;
   width: 100%;
 }
-
-@media (min-width: 350px) and (max-width: 768px) {
-	.tvshow-episode-item-thumbnail {
-	  height: 200px;
-	  width: 200px;
-	}
-}
 .tvshow-episode-item-description {
   padding: 5px;
   text-align: justify;
